[gd_scene load_steps=8 format=2]

[ext_resource path="res://EthnicityPage/ChooseEthnicityStep.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://CharacterSheet/CharacterSheet.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainScreen.gd" type="Script" id=4]
[ext_resource path="res://CharacterSheet/characterSheetStats.tres" type="Resource" id=5]
[ext_resource path="res://THEME.tres" type="Theme" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 4 )

[node name="CenterContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="StepContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 590.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ethnicity" parent="CenterContainer/VBoxContainer/StepContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 984.0
margin_bottom = 590.0

[node name="---SPACE---" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 594.0
margin_right = 984.0
margin_bottom = 614.0
rect_min_size = Vector2( 100, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 618.0
margin_right = 984.0
margin_bottom = 640.0
alignment = 1

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 145.0
margin_right = 194.0
margin_bottom = 22.0
text = "Back"

[node name="---SPACE---" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 198.0
margin_right = 298.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 302.0
margin_right = 682.0
margin_bottom = 22.0
custom_constants/separation = 20

[node name="EthnicityStep" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
material = SubResource( 1 )
margin_right = 20.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="ProfessionStep" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
material = SubResource( 1 )
margin_left = 40.0
margin_right = 60.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="AttributesStep" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
material = SubResource( 1 )
margin_left = 80.0
margin_right = 100.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="SpecialisationStep" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
material = SubResource( 1 )
margin_left = 120.0
margin_right = 140.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="SkillsStep" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
material = SubResource( 1 )
margin_left = 160.0
margin_right = 180.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="TricksStep" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
material = SubResource( 1 )
margin_left = 200.0
margin_right = 220.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="TextureButton7" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
material = SubResource( 1 )
margin_left = 240.0
margin_right = 260.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="TextureButton8" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
material = SubResource( 1 )
margin_left = 280.0
margin_right = 300.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="TextureButton9" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
material = SubResource( 1 )
margin_left = 320.0
margin_right = 340.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="TextureButton10" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
material = SubResource( 1 )
margin_left = 360.0
margin_right = 380.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="---SPACE2---" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 686.0
margin_right = 786.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )

[node name="Next" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 790.0
margin_right = 838.0
margin_bottom = 22.0
text = "Next"

[node name="CardButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -50.0
margin_right = 20.0
margin_bottom = 62.0

[node name="CharacterCardButton" type="RichTextLabel" parent="CardButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
rect_rotation = 0.00157754
mouse_filter = 1
bbcode_enabled = true
bbcode_text = "
[center]K[/center]
[center]A[/center]
[center]R[/center]
[center]T[/center]
[center]A[/center]"
text = "
K
A
R
T
A"

[node name="CharacterSheet" parent="." instance=ExtResource( 3 )]
visible = false
mouse_filter = 1
characterStats = ExtResource( 5 )

[node name="TextureRect" parent="CharacterSheet/PanelContainer/MarginContainer/ScrollContainer" index="0"]
margin_right = 964.0

[connection signal="ethnicity_chosen" from="CenterContainer/VBoxContainer/StepContainer/Ethnicity" to="CharacterSheet" method="_on_Ethnicity_ethnicity_chosen"]
[connection signal="button_up" from="CardButton" to="." method="_on_CardButton_button_up"]

[editable path="CharacterSheet"]
